--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -16,7 +16,7 @@
     <input class="Botones" type="submit" value="Ingresar">
   </form>
   <ul>
-    <li><a href="">¿Has olvidado tu contraseña?</a></li>
+    <li><a href="{%url 'reset_password'%}">¿Has olvidado tu contraseña?</a></li>
     <li><a href="{% url 'register' %}">Registrarse</a></li>
   </ul>
 </div>
