--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,7 +1,12 @@
 {% extends 'render_templates/base.html' %}
 {% load static %}
+{% block css %}
+<link rel="stylesheet" href="{% static 'render_templates/css/index.css' %}">
+<link rel="stylesheet" href="{% static 'render_templates/css/login.css' %}">
+{% endblock css %}
 {% block content %}
 {% if validlink %}
+<div class="centrado">
 <p>Por favor ingrese su nueva contraseña.</p>
 <form action="" method="post">
 <div style="display:none">
@@ -24,6 +29,7 @@
 </tr>
 </table>
 </form>
+</div>
 {% else %}
 <h1>Fallo el reinicio de contraseña</h1>
 <p>El link de reinicio de contraseña es invalido, posiblemente porque ya fue usado.
